问题优化
